<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.Goal">


    <ImageView
        android:id="@+id/imagecare"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:srcCompat="@drawable/ic_care"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/health_title"
        android:fontFamily="@font/ekkamai"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold"
        android:layout_below="@id/imagecare"/>
    <TextView
        android:id="@+id/font1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/health_desc"
        android:fontFamily="@font/ekkamai"
        android:textSize="@dimen/slide_desc"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_below="@id/font"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_health"
        android:text="@string/health_button"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/mitr"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        app:layout_widthPercent="85%"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape_pink"
        android:layout_below="@id/font1"
        app:layout_marginTopPercent="5%"
        />



</android.support.percent.PercentRelativeLayout>